feat: implement schedules and worker
